--- a/index.html
+++ b/index.html
@@ -563,8 +563,8 @@
     <script>
         // 기본 독서실 좌석 정보
         const defaultSeatData = {
-            41: "조민지", 34: "정예빈", 27: "김현나", 20: "이서연2", 14: "김유진2", 8: "진세희", 1: "신지윤",
-            42: "한예린", 35: "김아름", 28: "문지현", 21: "김민성3", 15: "김도윤2", 9: "김서영", 2: "김준성",
+            41: "김아름", 34: "정예빈", 27: "김현나", 20: "이서연2", 14: "김유진2", 8: "진세희", 1: "신지윤",
+            42: "한예린", 35: "김솜", 28: "문지현", 21: "김민성3", 15: "김도윤2", 9: "김서영", 2: "김준성",
             43: "박주연", 36: "이재원", 29: "한재원", 22: "김서윤3", 16: "구원모", 10: "팀명서2", 3: "이유진2",
             44: "배준호", 37: "성연주", 30: "정시현", 23: "이상현2", 17: "김태선", 11: "장유진2", 4: "황승하",
             45: "정은유", 38: "오시현", 31: "이예원", 24: "정민성", 18: "임예준2", 12: "이서은3", 5: "김다정",
